--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<script src="js/backbone.min.js"></script>
 	<script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
-	<script src="js/views/test-view.js"></script>
+	<script src="js/views/header-view.js"></script>
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
