Added a new view with table

--- a/index.html
+++ b/index.html
@@ -20,18 +20,21 @@
     </head>
     <body>
        <div id="header" class="jumbotron"></div>
+       <table id="mainScreen" class="table table-striped"></table>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-        <script src="js/jquery.js"></script>
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 	<script src="js/underscore.js"></script>
 	<script src="js/backbone.js"></script>
 	<script src="js/backbone.min.js"></script>
 	<script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+
+	<!--  Views --> 
 	<script src="js/views/header-view.js"></script>
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script src="js/views/screen-view.js"></script>
+	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
