--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Backbone Practice</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -27,7 +27,7 @@
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 	<script src="js/underscore.js"></script>
 	<script src="js/backbone.js"></script>
-	<script src="js/backbone.min.js"></script>
+	<!-- <script src="js/backbone.min.js"></script> -->
 	<script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
@@ -35,13 +35,13 @@
 	<script src="js/views/header-view.js"></script>
         <script src="js/views/screen-view.js"></script>
 	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
+       <!--  <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='//www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
+        </script> -->
     </body>
 </html>
