Added new view for products

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <body>
        <div id="header" class="jumbotron"></div>
        <table id="mainScreen" class="table table-striped"></table>
+       <table id="productScreen" class="table table-striped"></table>	
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
@@ -34,6 +35,8 @@
 	<!--  Views --> 
 	<script src="js/views/header-view.js"></script>
         <script src="js/views/screen-view.js"></script>
+	<script src="js/views/product-view.js"></script>
+
 	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
        <!--  <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
