--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
        <div id="header" class="jumbotron"></div>
        <table id="mainScreen" class="table table-striped"></table>
        <table id="productScreen" class="table table-striped"></table>	
-
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+       <div id="count">
+       	    <button type="button" class="btn btn-primary" id="add">Add</button>
+       </div> 
+       <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 	<script src="js/underscore.js"></script>
@@ -32,10 +34,14 @@
 	<script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
-	<!--  Views --> 
+	<!-- App Initiation -->
+	<script src="js/app.js"></script>
+
+	<!--  Views -->
 	<script src="js/views/header-view.js"></script>
         <script src="js/views/screen-view.js"></script>
 	<script src="js/views/product-view.js"></script>
+	<script src="js/views/count-view.js"></script>
 
 	<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
        <!--  <script>
