--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 	<script src="js/app.js"></script>
 
 	<!--  Views -->
+	<script>
+		$(function(){
+			app.init();
+		});
+	</script>
 	<script src="js/views/header-view.js"></script>
         <script src="js/views/screen-view.js"></script>
 	<script src="js/views/product-view.js"></script>
